# miniCalender

./: .gitignore  CLAUDE.md  LICENSE  entities.json  index.html  package-lock.json  package.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: google_calendar.rs  lib.rs  main.rs  state.rs
src/lib/: types.ts
src/lib/components/: Calendar.svelte  EventModal.svelte  Settings.svelte  TitleBar.svelte
src/lib/stores/: calendar.svelte.ts
